:tada: Complete TP Modele (via Tests)

--- a/Mon2ndSite/Mon2ndSite.csproj
+++ b/Mon2ndSite/Mon2ndSite.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Models\IDal.cs" />
     <Compile Include="Models\Poll.cs" />
     <Compile Include="Models\Resto.cs" />
+    <Compile Include="Models\Resultats.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\Vote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
