:construction: WIP TP3

--- a/Mon2ndSite.Tests/App.config
+++ b/Mon2ndSite.Tests/App.config
@@ -7,7 +7,7 @@
           requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="BddContext" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ChoixResto.Models.BddContextTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True" />
+    <add name="BddContext" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Mon2ndSite.Models.BddContextTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True" />
   </connectionStrings>
   <entityFramework>
     <providers>
