--- a/Mon2ndSite/Web.config
+++ b/Mon2ndSite/Web.config
@@ -9,7 +9,12 @@
         <section name="entityFramework"
           type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
           requirePermission="false"/>
-    </configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="BddContext" 
+         providerName="System.Data.SqlClient" 
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Mon2ndSite.Models.BddContext2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
