--- a/Mon2ndSite/Views/web.config
+++ b/Mon2ndSite/Views/web.config
@@ -36,7 +36,11 @@
     <compilation>
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
       </assemblies>
     </compilation>
   </system.web>
+  <authentication mode="Forms">
+    <forms loginUrl="~/LogIn/Index" />
+  </authentication>
 </configuration>
