--- a/Mon2ndSite/Web.config
+++ b/Mon2ndSite/Web.config
@@ -11,9 +11,8 @@
           requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="BddContext" 
-         providerName="System.Data.SqlClient" 
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Mon2ndSite.Models.BddContext2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True" />
+    <add name="BddContext" providerName="System.Data.SqlClient"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Mon2ndSite.Models.BddContext2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
