--- a/Mon2ndSite/Web.config
+++ b/Mon2ndSite/Web.config
@@ -21,9 +21,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/LogIn/Index" />
+	  </authentication>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
-  </system.web>
+  </system.web>    
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
